--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -20,6 +20,7 @@
     width: 20vw;
     /* border: 1px solid red; */
     padding: 20px;
+    /* padding-right: 20px; */
     background-color: #ffffff;
     /* margin-left: 10px; */
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
